# march-iv

./: .gitmodules  .travis.yml  README.md  build.sh  codecov.yaml
march_data_collector/: package.xml
march_data_collector/esp_models/: march.xml
march_data_collector/launch/: esp_adapter.launch  march_data_collector.launch
march_data_collector/scripts/: esp_adapter  march_data_collector
march_data_collector/src/: march.xml
march_data_collector/src/march_data_collector/: CoMCalculator.py  DataCollectorNode.py  ESP_adapter.py  ESP_connector.py  com_calculator.py  cp_calculator.py  data_collector_node.py  esp_adapter.py  march_data_collector_node.py
march_description/urdf/: march-iv.xacro  march4.xacro  test_joint_rotational.xacro
march_gain_scheduling/: CMakeLists.txt  setup.py
march_gain_scheduling/config/: sjaan_gait.yaml
march_gain_scheduling/config/march4/: gains_per_gait_type.yaml
march_gain_scheduling/launch/: march_gain_scheduling.launch
march_gain_scheduling/src/gain_scheduling/: dynamic_pid_reconfigurer.py
march_gain_scheduling/src/march_gain_scheduling/: dynamic_pid_reconfigurer.py  gain_scheduling_node.py  interpolate_pid_values.py  interpolation_errors.py  one_step_linear_interpolation.py  unequal_gain_length_error.py  unequal_length_error.py
march_gain_scheduling/test/: interpolate_pid_values_test.py  one_step_linear_interpolation_test.py
march_gait_scheduler/: CMakeLists.txt
march_gait_scheduler/src/: GaitSchedulerNode.cpp  gait_scheduler_node.cpp
march_gait_scheduler/test/: AcceptanceTest.cpp
march_gait_selection/: CMakeLists.txt  package.xml
march_gait_selection/launch/: march_gait_selection.launch
march_gait_selection/scripts/: march_gait_selection
march_gait_selection/src/march_gait_selection/: GaitSelection.py  GaitSelectionNode.py  PerformGaitAction.py  create_transition.py
march_gait_selection/src/march_gait_selection/march_sub_gait_selection/: sub_gait_selection.py
march_gait_selection/src/march_gait_selection/transition_gait/: create_transition.py  transition_subgait.py
march_gait_selection/test/: run_tests  run_tests.py  test_gait_transition.py
march_gait_selection/test/launch/: gait_selection.test  testing_gait_selection.test
march_gait_selection/test/nosetest/: TestBasicGaitSelection.py  TestGetSubgait.py  TestRunner.py  TestScanDirectory.py  TestValidateSubgaitName.py  TestValidateSubgaitTransition.py  test_transition_gait.py
march_gait_selection/test/nosetests/: test_gait_selection.py  test_gait_transition.py
march_launch/launch/: march.launch  march_headless.launch  march_iv.launch  march_simulation.launch
march_rqt_gait_selection/resource/: gait_selection.ui
march_rqt_gait_selection/src/march_rqt_gait_selection/: gait_selection.py
march_rqt_input_device/src/march_rqt_input_device/: input_device.py
march_rqt_launch_menu/resource/: launch_menu.ui
march_safety/: CMakeLists.txt  package.xml
march_safety/include/march_safety/: ErrorHandler.h  InputDeviceSafety.h  SafetyHandler.h  TemperatureSafety.h  TrajectorySafety.h  (+1 more)
march_safety/launch/: march_safety.launch
march_safety/src/: ErrorHandler.cpp  InputDeviceSafety.cpp  SafetyHandler.cpp  SafetyNode.cpp  TemperatureSafety.cpp  TrajectorySafety.cpp  safety_handler.cpp  safety_node.cpp
march_safety/test/: ConnectionLostErrorDeathTest.cpp  TestConnectionLost.cpp  TestConnectionLostError.cpp  TestTemperatureError.cpp  TestTrajControlPathTolerance.cpp  march_safety_temperature.test  rrbot.cpp  rrbot.xacro  rrbot_controllers.yaml  trajectory_controller_safety.test  trajectory_controller_simulation.test
march_shared_classes/: CMakeLists.txt  package.xml  setup.py
march_shared_classes/src/march_shared_classes/exceptions/: gait_exceptions.py  general_exceptions.py
march_shared_classes/src/march_shared_classes/gait/: Gait.py  Joint.py  gait.py  joint.py  joint_trajectory.py  setpoint.py  subgait.py
march_shared_classes/test/: gait_test.py  joint_trajectory_test.py  limits_test.py  run_tests.py  setpoint_test.py  subgait_test.py
march_shared_resources/: CMakeLists.txt  package.xml
march_shared_resources/action/: GaitInstruction.action
march_shared_resources/msg/: AfterLimitCommand.msg  Error.msg  FeetDistances.msg  GaitInstruction.msg  ImcErrorState.msg  PressureSole.msg  Setpoint.msg
march_sound_scheduler/src/: sound_scheduler_node.cpp
march_state_machine/: package.xml  setup.py
march_ws/: build.sh  travis-build.sh  trigger-dependent-build-base.sh  trigger-dependent-build.sh
march_ws/src/march_input_device/: CMakeLists.txt  package.xml
march_ws/src/march_input_device/launch/: march_input_device.launch  rqt_input_device.launch
march_ws/src/march_input_device/rqt_config/: input_device.perspective
march_ws/src/march_input_device/src/: input_device_node.cpp  input_device_node.h
march_ws/src/march_main/: package.xml
march_ws/src/march_main/api/: MovementAPI.cpp  MovementAPI.h  main.cpp
march_ws/src/march_main/src/common/communication/: TopicNames.h
(+79 files in other folders)
