<?xml version="1.0"?>
<package format="2">
    <name>march_main</name>
    <version>0.0.0</version>
    <description>The main logic for the march IV</description>
    <maintainer email="software@projectmarch.nl">Project March</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>roslint</build_depend>
    <build_depend>rostest</build_depend>

    <build_depend>rospy</build_depend>
    <build_depend>march_control</build_depend>
    <build_depend>march_custom_msgs</build_depend>
    <build_depend>rqt_gui</build_depend>
    <build_depend>rviz</build_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>march_custom_msgs</exec_depend>


    <build_export_depend>roscpp</build_export_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
